2007-06-20  Satoshi Nakagawa <artension@gmail.com>

	Changed to use keyword settings.

2007-06-20  Satoshi Nakagawa <artension@gmail.com>

	Changed to use DCC port range.
	Implemented address detection.

2007-06-20  Satoshi Nakagawa <artension@gmail.com>

	Added ib_mapped_int_outlet.

2007-06-20  Satoshi Nakagawa <artension@gmail.com>

	Supported loading float values in user defaults.

2007-06-20  Satoshi Nakagawa <artension@gmail.com>

	Added preferences dialog.

2007-06-20  Satoshi Nakagawa <artension@gmail.com>

	Refactoring.

2007-06-19  Satoshi Nakagawa <artension@gmail.com>

	Added facility of preference auto loading and saving.

2007-06-19  Satoshi Nakagawa <artension@gmail.com>

	Unified cells into one class on the DCC dialog.
	Reformed preference loading and saving.

2007-06-19  Satoshi Nakagawa <artension@gmail.com>

	Fixed a bug, cannot paste on dialogs.

2007-06-19  Satoshi Nakagawa <artension@gmail.com>

	Fixed locked Image deallocation bug.

2007-06-19  Satoshi Nakagawa <artension@gmail.com>

	Added clear button on DCC dialog.

2007-06-19  Satoshi Nakagawa <artension@gmail.com>

	Added DCC file sending.

2007-06-19  Satoshi Nakagawa <artension@gmail.com>

	Changed licensing terms.

2007-06-18  Satoshi Nakagawa <artension@gmail.com>

	Moved NumberFormat to lib/numberformat.rb.
	Added licensing term to all files.

2007-06-18  Satoshi Nakagawa <artension@gmail.com>

	Added prototype of DCC file sending.
	Added AsyncTcpServer and AsyncTcpClient.
	
2007-06-17  Satoshi Nakagawa <artension@gmail.com>

	Reformed saving frames.

2007-06-17  Satoshi Nakagawa <artension@gmail.com>

	Changed to resolve my address using resolv.rb.

2007-06-17  Satoshi Nakagawa <artension@gmail.com>

	Changed DCC receiving path to user's desktop.

2007-06-17  Satoshi Nakagawa <artension@gmail.com>

	Added initial settings of the DCC window splitter.

2007-06-15  Satoshi Nakagawa <artension@gmail.com>

	Changed whois parameters to acquire detail information.
