@@ -22,6 +22,6 @@
 	<key>showFileHierarchyDrawer</key>
 	<true/>
 	<key>windowFrame</key>
-	<string>{{589, 63}, {1271, 1105}}</string>
+	<string>{{522, 64}, {962, 955}}</string>
 </dict>
 </plist>
